<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>pay-java-parent</artifactId>
        <groupId>com.egzosn</groupId>
         <version>${revision}</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <packaging>war</packaging>
    <groupId>com.egzosn</groupId>
    <artifactId>pay-java-demo</artifactId>

    <properties>
        <spring.version>4.3.4.RELEASE</spring.version>
        <junit.version>4.10</junit.version>
        <hibernate.version>4.3.6.Final</hibernate.version>
        <servlet-api.version>4.0.1</servlet-api.version>
    </properties>

    <dependencies>
        <!--支付-->
        <dependency>
            <groupId>com.egzosn</groupId>
            <artifactId>pay-java-payoneer</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>com.egzosn</groupId>
            <artifactId>pay-java-wx</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>com.egzosn</groupId>
            <artifactId>pay-java-ali</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>com.egzosn</groupId>
            <artifactId>pay-java-wx-youdian</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>com.egzosn</groupId>
            <artifactId>pay-java-fuiou</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>com.egzosn</groupId>
            <artifactId>pay-java-paypal</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>com.egzosn</groupId>
            <artifactId>pay-java-union</artifactId>
            <version>${revision}</version>
        </dependency>
        <!--/支付-->
        <dependency>
            <groupId>com.egzosn</groupId>
            <artifactId>pay-java-web-support</artifactId>
        </dependency>
        <!-- spring -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.version}</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>1.3.5</version>
        </dependency>


        <!-- /spring -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <scope>provided</scope>
            <version>${servlet-api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.10.6</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.30</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>pay-java-demo</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.0</version>
                <configuration>
                    <port>8080</port>
                    <path>/</path>
                    <uriEncoding>UTF-8</uriEncoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <encoding>utf8</encoding>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>*</include>
                    <include>*/**</include>
                </includes>
            </resource>
        </resources>
    </build>
</project>